TA-175: Fix pact tests